crates/cadtab-core/src/snapshots/cadtab_core__eval__event_eval_tests__measure_assembly_snapshot.snap
---
source: crates/cadtab-core/src/eval.rs
expression: measures
---
[
    Measure {
        events: [
            Event {
                kind: Note(
                    Note {
                        pos: Position {
                            string: 3,
                            fret: 0,
                        },
                        dur: Duration {
                            num: 1,
                            den: 4,
                        },
                        right_hand: None,
                        technique: None,
                        tie: false,
                    },
                ),
                span: Span {
                    start: 35,
                    end: 38,
                },
                chord: None,
            },
            Event {
                kind: Note(
                    Note {
                        pos: Position {
                            string: 2,
                            fret: 0,
                        },
                        dur: Duration {
                            num: 1,
                            den: 4,
                        },
                        right_hand: None,
                        technique: None,
                        tie: false,
                    },
                ),
                span: Span {
                    start: 39,
                    end: 42,
                },
                chord: None,
            },
            Event {
                kind: Note(
                    Note {
                        pos: Position {
                            string: 1,
                            fret: 0,
                        },
                        dur: Duration {
                            num: 1,
                            den: 4,
                        },
                        right_hand: None,
                        technique: None,
                        tie: false,
                    },
                ),
                span: Span {
                    start: 43,
                    end: 46,
                },
                chord: None,
            },
            Event {
                kind: Note(
                    Note {
                        pos: Position {
                            string: 5,
                            fret: 0,
                        },
                        dur: Duration {
                            num: 1,
                            den: 4,
                        },
                        right_hand: None,
                        technique: None,
                        tie: false,
                    },
                ),
                span: Span {
                    start: 47,
                    end: 50,
                },
                chord: None,
            },
        ],
        meter: Some(
            TimeSig {
                num: 4,
                den: 4,
            },
        ),
        repeat_start: false,
        repeat_end: false,
        ending: None,
        is_pickup: false,
        section: None,
    },
    Measure {
        events: [
            Event {
                kind: Note(
                    Note {
                        pos: Position {
                            string: 3,
                            fret: 0,
                        },
                        dur: Duration {
                            num: 1,
                            den: 4,
                        },
                        right_hand: None,
                        technique: None,
                        tie: false,
                    },
                ),
                span: Span {
                    start: 63,
                    end: 79,
                },
                chord: None,
            },
            Event {
                kind: Note(
                    Note {
                        pos: Position {
                            string: 3,
                            fret: 2,
                        },
                        dur: Duration {
                            num: 1,
                            den: 4,
                        },
                        right_hand: None,
                        technique: Some(
                            HammerOn,
                        ),
                        tie: false,
                    },
                ),
                span: Span {
                    start: 63,
                    end: 79,
                },
                chord: None,
            },
            Event {
                kind: Note(
                    Note {
                        pos: Position {
                            string: 1,
                            fret: 0,
                        },
                        dur: Duration {
                            num: 1,
                            den: 4,
                        },
                        right_hand: None,
                        technique: None,
                        tie: false,
                    },
                ),
                span: Span {
                    start: 81,
                    end: 84,
                },
                chord: None,
            },
        ],
        meter: None,
        repeat_start: false,
        repeat_end: false,
        ending: None,
        is_pickup: false,
        section: None,
    },
    Measure {
        events: [
            Event {
                kind: Note(
                    Note {
                        pos: Position {
                            string: 3,
                            fret: 2,
                        },
                        dur: Duration {
                            num: 1,
                            den: 4,
                        },
                        right_hand: None,
                        technique: None,
                        tie: false,
                    },
                ),
                span: Span {
                    start: 89,
                    end: 92,
                },
                chord: None,
            },
            Event {
                kind: Note(
                    Note {
                        pos: Position {
                            string: 3,
                            fret: 4,
                        },
                        dur: Duration {
                            num: 1,
                            den: 4,
                        },
                        right_hand: None,
                        technique: None,
                        tie: false,
                    },
                ),
                span: Span {
                    start: 93,
                    end: 96,
                },
                chord: None,
            },
            Event {
                kind: Note(
                    Note {
                        pos: Position {
                            string: 3,
                            fret: 0,
                        },
                        dur: Duration {
                            num: 1,
                            den: 4,
                        },
                        right_hand: None,
                        technique: None,
                        tie: false,
                    },
                ),
                span: Span {
                    start: 97,
                    end: 100,
                },
                chord: None,
            },
            Event {
                kind: Note(
                    Note {
                        pos: Position {
                            string: 2,
                            fret: 0,
                        },
                        dur: Duration {
                            num: 1,
                            den: 4,
                        },
                        right_hand: None,
                        technique: None,
                        tie: false,
                    },
                ),
                span: Span {
                    start: 101,
                    end: 104,
                },
                chord: None,
            },
        ],
        meter: None,
        repeat_start: false,
        repeat_end: false,
        ending: None,
        is_pickup: false,
        section: None,
    },
]
