crates/cadtab-core/src/snapshots/cadtab_core__eval__event_eval_tests__showcase_compiles_to_a_golden_score.snap
---
source: crates/cadtab-core/src/eval.rs
expression: score
---
Score {
    meta: ScoreMeta {
        title: Some(
            "Syntax Showcase",
        ),
        composer: Some(
            "cadtab",
        ),
        tempo: Some(
            130,
        ),
    },
    instrument: Instrument {
        name: "banjo",
        strings: [
            StringDef {
                open_pitch: Pitch(
                    62,
                ),
                label: "D",
            },
            StringDef {
                open_pitch: Pitch(
                    59,
                ),
                label: "B",
            },
            StringDef {
                open_pitch: Pitch(
                    55,
                ),
                label: "G",
            },
            StringDef {
                open_pitch: Pitch(
                    50,
                ),
                label: "D",
            },
            StringDef {
                open_pitch: Pitch(
                    67,
                ),
                label: "g",
            },
        ],
    },
    capo: [
        "5th string @ 2",
    ],
    measures: [
        Measure {
            events: [
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 2,
                                fret: 0,
                            },
                            dur: Duration {
                                num: 1,
                                den: 8,
                            },
                            right_hand: Some(
                                Finger(
                                    Index,
                                ),
                            ),
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 215,
                        end: 220,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 1,
                                fret: 0,
                            },
                            dur: Duration {
                                num: 1,
                                den: 8,
                            },
                            right_hand: Some(
                                Finger(
                                    Thumb,
                                ),
                            ),
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 221,
                        end: 226,
                    },
                },
            ],
            meter: Some(
                TimeSig {
                    num: 4,
                    den: 4,
                },
            ),
            repeat_start: false,
            repeat_end: false,
            ending: None,
            is_pickup: true,
        },
        Measure {
            events: [
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 3,
                                fret: 0,
                            },
                            dur: Duration {
                                num: 1,
                                den: 8,
                            },
                            right_hand: Some(
                                Finger(
                                    Thumb,
                                ),
                            ),
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 331,
                        end: 336,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 2,
                                fret: 0,
                            },
                            dur: Duration {
                                num: 1,
                                den: 8,
                            },
                            right_hand: Some(
                                Finger(
                                    Index,
                                ),
                            ),
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 338,
                        end: 343,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 1,
                                fret: 0,
                            },
                            dur: Duration {
                                num: 1,
                                den: 8,
                            },
                            right_hand: Some(
                                Finger(
                                    Middle,
                                ),
                            ),
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 345,
                        end: 350,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 5,
                                fret: 0,
                            },
                            dur: Duration {
                                num: 1,
                                den: 8,
                            },
                            right_hand: Some(
                                Finger(
                                    Thumb,
                                ),
                            ),
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 353,
                        end: 358,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 3,
                                fret: 0,
                            },
                            dur: Duration {
                                num: 1,
                                den: 8,
                            },
                            right_hand: Some(
                                Finger(
                                    Index,
                                ),
                            ),
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 360,
                        end: 365,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 1,
                                fret: 0,
                            },
                            dur: Duration {
                                num: 1,
                                den: 8,
                            },
                            right_hand: Some(
                                Finger(
                                    Middle,
                                ),
                            ),
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 367,
                        end: 372,
                    },
                },
                Event {
                    kind: Chord(
                        Chord {
                            dur: Duration {
                                num: 1,
                                den: 4,
                            },
                            notes: [
                                ChordNote {
                                    pos: Position {
                                        string: 1,
                                        fret: 0,
                                    },
                                    right_hand: Some(
                                        Finger(
                                            Middle,
                                        ),
                                    ),
                                },
                                ChordNote {
                                    pos: Position {
                                        string: 5,
                                        fret: 0,
                                    },
                                    right_hand: Some(
                                        Finger(
                                            Thumb,
                                        ),
                                    ),
                                },
                            ],
                        },
                    ),
                    span: Span {
                        start: 400,
                        end: 415,
                    },
                },
            ],
            meter: None,
            repeat_start: true,
            repeat_end: false,
            ending: None,
            is_pickup: false,
        },
        Measure {
            events: [
                Event {
                    kind: Rest(
                        Duration {
                            num: 1,
                            den: 8,
                        },
                    ),
                    span: Span {
                        start: 496,
                        end: 499,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 3,
                                fret: 2,
                            },
                            dur: Duration {
                                num: 1,
                                den: 8,
                            },
                            right_hand: None,
                            technique: None,
                            tie: true,
                        },
                    ),
                    span: Span {
                        start: 501,
                        end: 504,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 3,
                                fret: 2,
                            },
                            dur: Duration {
                                num: 1,
                                den: 8,
                            },
                            right_hand: None,
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 507,
                        end: 510,
                    },
                },
            ],
            meter: None,
            repeat_start: false,
            repeat_end: true,
            ending: Some(
                1,
            ),
            is_pickup: false,
        },
        Measure {
            events: [
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 1,
                                fret: 0,
                            },
                            dur: Duration {
                                num: 1,
                                den: 8,
                            },
                            right_hand: Some(
                                Finger(
                                    Middle,
                                ),
                            ),
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 560,
                        end: 565,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 1,
                                fret: 0,
                            },
                            dur: Duration {
                                num: 1,
                                den: 8,
                            },
                            right_hand: Some(
                                Finger(
                                    Middle,
                                ),
                            ),
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 566,
                        end: 571,
                    },
                },
            ],
            meter: None,
            repeat_start: false,
            repeat_end: false,
            ending: Some(
                2,
            ),
            is_pickup: false,
        },
        Measure {
            events: [
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 3,
                                fret: 2,
                            },
                            dur: Duration {
                                num: 1,
                                den: 4,
                            },
                            right_hand: None,
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 687,
                        end: 690,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 3,
                                fret: 4,
                            },
                            dur: Duration {
                                num: 1,
                                den: 4,
                            },
                            right_hand: None,
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 691,
                        end: 694,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 3,
                                fret: 2,
                            },
                            dur: Duration {
                                num: 1,
                                den: 4,
                            },
                            right_hand: None,
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 687,
                        end: 690,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 3,
                                fret: 4,
                            },
                            dur: Duration {
                                num: 1,
                                den: 4,
                            },
                            right_hand: None,
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 691,
                        end: 694,
                    },
                },
            ],
            meter: None,
            repeat_start: false,
            repeat_end: false,
            ending: None,
            is_pickup: false,
        },
        Measure {
            events: [
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 3,
                                fret: 0,
                            },
                            dur: Duration {
                                num: 1,
                                den: 4,
                            },
                            right_hand: None,
                            technique: None,
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 820,
                        end: 836,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 3,
                                fret: 2,
                            },
                            dur: Duration {
                                num: 1,
                                den: 4,
                            },
                            right_hand: None,
                            technique: Some(
                                HammerOn,
                            ),
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 820,
                        end: 836,
                    },
                },
                Event {
                    kind: Note(
                        Note {
                            pos: Position {
                                string: 1,
                                fret: 7,
                            },
                            dur: Duration {
                                num: 1,
                                den: 4,
                            },
                            right_hand: None,
                            technique: Some(
                                Bend,
                            ),
                            tie: false,
                        },
                    ),
                    span: Span {
                        start: 875,
                        end: 884,
                    },
                },
            ],
            meter: None,
            repeat_start: false,
            repeat_end: false,
            ending: None,
            is_pickup: false,
        },
    ],
}
