crates/cadtab-core/src/snapshots/cadtab_core__eval__event_eval_tests__stdlib_rolls_snapshot.snap
---
source: crates/cadtab-core/src/eval.rs
expression: shapes
---
[
    (
        "forward_roll",
        [
            (
                3,
                't',
            ),
            (
                2,
                'i',
            ),
            (
                1,
                'm',
            ),
            (
                3,
                't',
            ),
            (
                2,
                'i',
            ),
            (
                1,
                'm',
            ),
            (
                3,
                't',
            ),
            (
                1,
                'm',
            ),
        ],
    ),
    (
        "backward_roll",
        [
            (
                1,
                'm',
            ),
            (
                2,
                'i',
            ),
            (
                3,
                't',
            ),
            (
                1,
                'm',
            ),
            (
                2,
                'i',
            ),
            (
                3,
                't',
            ),
            (
                1,
                'm',
            ),
            (
                3,
                't',
            ),
        ],
    ),
    (
        "alternating_thumb_roll",
        [
            (
                3,
                't',
            ),
            (
                2,
                'i',
            ),
            (
                3,
                't',
            ),
            (
                1,
                'm',
            ),
            (
                3,
                't',
            ),
            (
                2,
                'i',
            ),
            (
                3,
                't',
            ),
            (
                1,
                'm',
            ),
        ],
    ),
    (
        "foggy_mountain_roll",
        [
            (
                3,
                't',
            ),
            (
                2,
                'i',
            ),
            (
                1,
                'm',
            ),
            (
                3,
                't',
            ),
            (
                1,
                'm',
            ),
            (
                3,
                't',
            ),
            (
                2,
                'i',
            ),
            (
                1,
                'm',
            ),
        ],
    ),
]
